# project-2

./: .cspell.json  .pre-commit-config.yaml  README.md  debug_project2.py  project2.py  pyproject.toml  test.py
.devcontainer/: post-create.sh
docs/: CODE.md  PARSER.md  Recursive_descent_parsing_code_example_2024.ipynb  Recursive_descent_parsing_code_with_FOLLOW_example_2024.ipynb
src/project2/: datalogprogram.py  fsm.py  lexer.py  parser.py  project2.py  token.py
tests/: passoff_utils.py  test_datalogprogram.py  test_parser.py  test_passoff_100.py  test_passoff_80.py
